# ml-l3m

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: README.md  defaults.yaml
configs/aimv1/: 001_aim_v1_600M.yaml
configs/aimv2/: 001_aimv2_hfdata.yaml  002_aimv2_moe_hfdata.yaml
configs/clip/: 001_clip_hfdata.yaml
configs/supervised_imagenet/: 001_vit_large_imagenet.yaml
configs/text/: 001_llm_hfdata.yaml
data/assets/: imagenet_classes.pkl  make_classnames.py
docs/: Makefile  conf.py  index.rst  installation.rst
docs/_ext/: typed_returns.py
docs/_templates/autosummary/: class.rst
docs/api/: index.rst  logging.rst  misc.rst
docs/api/data/: huggingface.rst  index.rst  vision.rst
docs/api/helpers/: dist.rst  index.rst  moe.rst  vision.rst
docs/api/loss/: index.rst
docs/api/metrics/: index.rst
docs/api/model/: heads.rst  index.rst  layers.rst  postprocessors.rst  preprocessors.rst  trunks.rst  wrappers.rst
docs/api/optim/: index.rst
run/: launcher.py  runner.py
src/l3m/: __init__.py  engine.py  evaluator.py  logging.py
src/l3m/constants/: __init__.py  generic.py  prompts.py  typing.py
src/l3m/data/: __init__.py  dataset_with_generator.py  samplers.py
src/l3m/helpers/: __init__.py  checkpoint.py  omegaconf_resolvers.py  utils.py
src/l3m/loss/: __init__.py  clip_loss.py  discrete_loss.py  llm_cross_entropy_loss.py  mae_loss.py  moe_balancing_loss.py  wrappers.py
src/l3m/metrics/: __init__.py  accuracy.py
src/l3m/model/: __init__.py  meta_models.py  (+1 more)
(+55 files in other folders)
